[gd_scene load_steps=24 format=3 uid="uid://bv1vep1wp1e0f"]

[ext_resource type="Script" uid="uid://cb0bpds2brbvg" path="res://enemies/stalac.gd" id="1_8s1wh"]
[ext_resource type="Texture2D" uid="uid://c24c22pd2hffn" path="res://assets/placeholder/spike_fall_enemy_walk.png" id="2_8s1wh"]
[ext_resource type="Texture2D" uid="uid://b0b0g0vamn4vg" path="res://assets/placeholder/spike_fall_enemy_idle_out.png" id="3_wkc6q"]
[ext_resource type="Texture2D" uid="uid://pi2qjpijhtcv" path="res://assets/placeholder/spike_fall_enemy.png" id="4_ni8p4"]
[ext_resource type="Script" uid="uid://caarb4bmf4cd0" path="res://Management/states/stalac/stalac_inactive.gd" id="4_wkc6q"]
[ext_resource type="Script" uid="uid://clc53hxo1oe16" path="res://Management/states/stalac/stalac_idle.gd" id="5_8djhq"]
[ext_resource type="PackedScene" uid="uid://dtmpj3pwogil8" path="res://Management/composition_scenes/attack_area.tscn" id="5_xe8q6"]
[ext_resource type="BehaviorTree" uid="uid://jl3nir4suhfl" path="res://ai/trees/rockrab/rockrab_idle_tree.tres" id="7_0mhi6"]
[ext_resource type="Script" uid="uid://c40ktihwr8ptl" path="res://Management/states/stalac/stalac_fall_attack.gd" id="8_hhg45"]
[ext_resource type="Script" uid="uid://mka5gat6w87y" path="res://enemies/stalac_dash_attack.gd" id="8_sluh6"]
[ext_resource type="Script" uid="uid://dkg3kffkqgt0o" path="res://enemies/stalac_walk.gd" id="8_tvg2v"]
[ext_resource type="Script" uid="uid://cbapmigxe331e" path="res://enemies/stalac_chase.gd" id="11_84xmj"]
[ext_resource type="PackedScene" uid="uid://dghe1uklhuim0" path="res://Management/composition_scenes/health_component.tscn" id="13_84xmj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8s1wh"]
radius = 3.0
height = 42.0

[sub_resource type="Animation" id="Animation_xe8q6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_wkc6q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("texture:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_tvg2v"]
resource_name = "attack"
length = 1.00001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_wkc6q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("texture:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_0mhi6"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ni8p4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ni8p4"]
resource_name = "idle_out"
length = 0.666675
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_wkc6q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_wkc6q"]
resource_name = "inactive"
length = 0.0833417
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_wkc6q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8djhq"]
resource_name = "walk"
length = 0.250008
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8s1wh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ni8p4"]
_data = {
&"RESET": SubResource("Animation_xe8q6"),
&"attack": SubResource("Animation_tvg2v"),
&"idle": SubResource("Animation_0mhi6"),
&"idle_out": SubResource("Animation_ni8p4"),
&"inactive": SubResource("Animation_wkc6q"),
&"walk": SubResource("Animation_8djhq")
}

[sub_resource type="BlackboardPlan" id="BlackboardPlan_hhg45"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8djhq"]
radius = 2.0
height = 50.0

[node name="stalac" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "attack_area")]
collision_layer = 2
collision_mask = 65708
script = ExtResource("1_8s1wh")
health_component = NodePath("HealthComponent")
attack_area = NodePath("texture/AttackArea")
element = "earth"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_8s1wh")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ni8p4")
}

[node name="hsm" type="LimboHSM" parent="."]

[node name="stalac_inactive" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation", "fall_1", "fall_2")]
script = ExtResource("4_wkc6q")
parent = NodePath("../..")
animation = NodePath("../../animation")
fall_1 = NodePath("../../fall_1")
fall_2 = NodePath("../../fall_2")

[node name="stalac_idle" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation", "tree", "idle_timer")]
script = ExtResource("5_8djhq")
parent = NodePath("../..")
animation = NodePath("../../animation")
idle_min_time = 2.0
idle_max_time = 3.0
tree = NodePath("idle_tree")
idle_timer = NodePath("../../idle_timer")

[node name="idle_tree" type="BTPlayer" parent="hsm/stalac_idle"]
behavior_tree = ExtResource("7_0mhi6")
blackboard_plan = SubResource("BlackboardPlan_hhg45")

[node name="stalac_walk" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation")]
script = ExtResource("8_tvg2v")
parent = NodePath("../..")
animation = NodePath("../../animation")
speed = 8000.0

[node name="stalac_dash_attack" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation", "attack_timer")]
script = ExtResource("8_sluh6")
parent = NodePath("../..")
animation = NodePath("../../animation")
attack_timer = NodePath("../../attack_timer")

[node name="stalac_fall_attack" type="LimboState" parent="hsm"]
script = ExtResource("8_hhg45")

[node name="stalac_chase" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation")]
script = ExtResource("11_84xmj")
parent = NodePath("../..")
animation = NodePath("../../animation")
speed = 12000.0
anim_speed_mult = 1.5

[node name="fall_1" type="RayCast2D" parent="."]
position = Vector2(-6, 0)
rotation = -3.14159
target_position = Vector2(0.00162601, 366)
hit_from_inside = true

[node name="fall_2" type="RayCast2D" parent="."]
position = Vector2(6, 0)
rotation = -3.14159
target_position = Vector2(0.00162601, 366)
hit_from_inside = true

[node name="activate_area" type="Area2D" parent="."]
collision_layer = 0

[node name="activate_collision" type="CollisionPolygon2D" parent="activate_area"]
polygon = PackedVector2Array(-96, 0, -96, -96, 96, -96, 96, 0)

[node name="chase_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32769

[node name="chase_polygon" type="CollisionPolygon2D" parent="chase_area"]
polygon = PackedVector2Array(-256, -160, -256, 0, 256, 0, 256, -160)

[node name="can_attack_area" type="Area2D" parent="."]
collision_layer = 0

[node name="can_attack_polygon" type="CollisionPolygon2D" parent="can_attack_area"]
polygon = PackedVector2Array(-96, -47, -96, 0, 96, 0, 96, -47)

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(0, -25)
texture = ExtResource("3_wkc6q")
hframes = 9

[node name="AttackArea" parent="texture" instance=ExtResource("5_xe8q6")]
position = Vector2(0, 25)
collision_mask = 1
targets = Array[String](["player"])
damage = 10.0
knockback_force = -100.0
poise_damage = 6.0
attack_name = "stalac_stab"

[node name="attack_area_collision" type="CollisionShape2D" parent="texture/AttackArea"]
position = Vector2(0, -25)
shape = SubResource("CapsuleShape2D_8djhq")

[node name="idle_timer" type="Timer" parent="."]
one_shot = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("attack_timer") instance=ExtResource("13_84xmj")]
attack_timer = NodePath("../attack_timer")

[connection signal="animation_finished" from="animation" to="hsm/stalac_inactive" method="_on_animation_finished"]
[connection signal="animation_finished" from="animation" to="hsm/stalac_dash_attack" method="_on_animation_animation_finished"]
[connection signal="body_entered" from="activate_area" to="hsm/stalac_inactive" method="_on_activate_area_body_entered"]
[connection signal="body_entered" from="chase_area" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="chase_area" to="." method="_on_chase_area_body_exited"]
[connection signal="body_entered" from="can_attack_area" to="." method="_on_can_attack_area_body_entered"]
[connection signal="body_exited" from="can_attack_area" to="." method="_on_can_attack_area_body_exited"]
[connection signal="timeout" from="idle_timer" to="hsm/stalac_idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
